[tool.poetry]
name = "ModeOpt"
version = "0.1.0"
description = "Mode remaining exploration for model-based reinforcement learning in TensorFlow/GPflow."
authors = ["Aidan Scannell <scannell.aidan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tensorflow = "^2.4.0"
matplotlib = "^3.2.1"
gin = "^0.1.6"
sklearn = "^0.0"

# My packages on GitHub
# simenvs = { git = "https://github.com/aidanscannell/simenvs"}
# mogpe = {git = "https://github.com/aidanscannell/mogpe", tag = "v0.2.0"}
geoflow = {path = "../geoflow", develop=true}
mogpe = {path = "../mogpe", develop=true}  # https://github.com/aidanscannell/mogpe
simenvs = {path = "../sim-envs", develop=true}  # https://github.com/aidanscannell/mogpe
mlflow = "^1.22.0"
hydra-core = {path = "/Users/aidanscannell/Developer/forked-repos/hydra", develop=true}
wandb = "^0.12.10"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.6.4"
pyflakes = "^2.2.0"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
python-language-server = "^0.36.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
